# pythonCFS

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_wheels.yml  publish.yml  test.yml
src/CFS/: CFS.pyx  CFSFile.pyi  CFSFile.pyx  _constants.pyx  _routines.pyx  api.pxd  api.pyx  routines.pyx
tests/: test_cfs_flags.py  test_cfsfile.py  test_constants.py  test_open_cfs_file.py
tests/test_data/: test_file.cfs
