[project]
name = "CFS"
version = "0.1.0dev1"
description = "Python wrapper for the Cambridge Electronic Design CFS library."
authors = [
	{name = "Seamus", email = "<m0ose01@proton.me>"}
]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.3.2", "build>=1.2.1"]

[build-system]
requires = ["scikit-build-core>=0.10.3", "cython>=3.0.11"]
build-backend = "scikit_build_core.build"

[tool.cibuildwheel]
build-frontend = "build"
